--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                  <input type="date" id="dateEnd"/>
             </div>
         
-             <input type="button" id="btn" value="Calculate Age" />
+             <input type="button" id="btn" value="Calculate Age" onclick="ageCalculate()" />
         </div>     
         
     </div>
